# hogbox

./: CMakeLists.txt  ProjectHome.md
CMakeModules/: FindOSG.cmake  hogboxMacroUtils.cmake
src/: CMakeLists.txt
src/hogbox/: AnimationPathController.cpp  AnimationPathEventCallBack.cpp  AssetManager.cpp  CMakeLists.txt  HogBoxLight.cpp  HogBoxMaterial.cpp  HogBoxMesh.cpp  HogBoxObject.cpp  HogBoxUtils.cpp  HogBoxViewer.cpp  NPOTResizeCallback.cpp  Noise.cpp  Quad.cpp  SystemInfo.cpp  TransformQuad.cpp  Version.cpp
src/hogboxDB/: CMakeLists.txt  HogBoxManager.cpp  HogBoxRegistry.cpp  XmlClassManager.cpp  XmlClassWrapper.cpp
src/hogboxHUD/: ButtonRegion.cpp  CMakeLists.txt  HogBoxHud.cpp  Hud.cpp  HudInputHandler.cpp  HudRegion.cpp  OsgInput.cpp  Region.cpp  StrokeRegion.cpp  TextRegion.cpp
src/hogboxStage/: CMakeLists.txt
src/hogboxVision/: CMakeLists.txt  CameraCalibration.cpp  HogVisionNode.cpp  PlanarTrackedObject.cpp  RTTPass.cpp  TrackedObject.cpp  VideoLayer.cpp  VideoStream.cpp  VisionRegistry.cpp
src/hogboxVisionPlugins/: CMakeLists.txt
src/hogboxVisionPlugins/hogboxVisionDShowVideoPlugin/: CMakeLists.txt  DShowVideoStream.cpp  DShowVideoStream.h
src/hogboxVisionPlugins/hogboxVisionDShowWebCamPlugin/: CMakeLists.txt  DShowCaptureStream.h
src/hogboxVisionPlugins/hogboxVisionIPhoneWebCamPlugin/: CMakeLists.txt  IPhoneCameraController.h  IPhoneWebCamStream.h  IPhoneWebCamStream.mm
src/hogboxXmlPlugins/: CMakeLists.txt
src/hogboxXmlPlugins/hogboxHUDPlugin/: CMakeLists.txt  HudRegionManager.cpp  HudRegionXmlWrapper.h
src/hogboxXmlPlugins/hogboxPlugin/: CMakeLists.txt  FeatureLevelXmlWrapper.h  HogBoxLightManager.cpp  HogBoxLightXmlWrapper.h  HogBoxMaterialManager.cpp  HogBoxMaterialXmlWrapper.h  HogBoxObjectManager.cpp  HogBoxObjectXmlWrapper.h  HogBoxViewerManager.cpp  HogBoxViewerXmlWrapper.h  HogBoxXmlManager.cpp  MeshMappingXmlWrapper.h  OsgImageManager.cpp  OsgImageXmlWrapper.h  OsgNodeManager.cpp  OsgNodeXmlWrapper.h  OsgShaderManager.cpp  OsgShaderXmlWrapper.h  OsgTexture2DXmlWrapper.h  OsgTexture3DXmlWrapper.h  OsgTextureCubeXmlWrapper.h  OsgTextureManager.cpp  OsgTextureRectangleXmlWrapper.h  OsgTextureXmlWrapper.h  OsgUniformXmlWrapper.h
src/hogboxXmlPlugins/hogboxVisionPlugin/: CMakeLists.txt  VideoStreamManager.cpp  VideoStreamXmlWrapper.h
trunk/: CMakeLists.txt
trunk/CMakeModules/: cmake_uninstall.cmake.in
trunk/PlatformSpecifics/Android/: Android.mk.master.in
trunk/examples/: CMakeLists.txt
trunk/examples/OsgSandBox/: OsgSandBox.cpp
trunk/examples/SandBox/: CMakeLists.txt  SandBox.cpp
trunk/include/hogbox/: AnimateValue.h  AnimatedTransformQuad.h  AnimationPathControl.h  AnimationPathEventCallBack.h  AnimationUtils.h  AssetManager.h  Callback.h  Export.h  HogBoxBase.h  HogBoxHardwareRigTransform.h  HogBoxLight.h  HogBoxMaterial.h  HogBoxMesh.h  HogBoxNotifyHandler.h  HogBoxObject.h  HogBoxUtils.h  HogBoxViewer.h  NPOTResizeCallback.h  Noise.h  Quad.h  Singleton.h  SystemInfo.h  TransformQuad.h  UniformAttribute.h  Version.h
trunk/include/hogboxDB/: HogBoxManager.h  HogBoxRegistry.h  XmlAttribute.h  XmlAttributeEnum.h  XmlAttributeList.h  XmlAttributeMap.h  XmlAttributePtr.h  XmlClassManager.h  XmlClassManagerWrapper.h  XmlClassWrapper.h  XmlUtils.h  hogboxDB.txt
trunk/include/hogboxHUD/: AnimateRegionCallback.h  ButtonRegion.h  Export.h  HogBoxHud.h  Hud.h  HudEventCallback.h  HudInputEvent.h  HudInputHandler.h  HudRegion.h  OsgInput.h  Region.h  StrokeRegion.h  TextRegion.h
trunk/include/hogboxStage/: Component.h  ComponentEvent.h  ComponentEventCallback.h  Entity.h  EntityManager.h  PhysicsComponent.h  RenderableComponent.h  WorldTransformComponent.h
trunk/include/hogboxVision/: CameraBasedTracker.h  Export.h  HogTracker.h  HogVisionNode.h  PlanarTrackedObject.h  RTTPass.h  TrackedObject.h  VideoFileStream.h  VideoLayer.h  VideoStream.h  VisionRegistry.h  VisionRegistryWrappers.h  WebCamStream.h
trunk/src/: CMakeLists.txt
trunk/src/hogbox/: AnimatedTransformQuad.cpp  AnimationPathController.cpp  AnimationPathEventCallBack.cpp  AssetManager.cpp  CMakeLists.txt  HogBoxLight.cpp  HogBoxMaterial.cpp  HogBoxMesh.cpp  HogBoxNotifyHandler.cpp  HogBoxObject.cpp  HogBoxUtils.cpp  HogBoxViewer.cpp  NPOTResizeCallback.cpp  Quad.cpp  SystemInfo.cpp  TransformQuad.cpp  Version.in
trunk/src/hogboxDB/: HogBoxManager.cpp  HogBoxRegistry.cpp  XmlClassManager.cpp  XmlClassWrapper.cpp
trunk/src/hogboxHUD/: ButtonRegion.cpp  CMakeLists.txt  HogBoxHud.cpp  Hud.cpp  HudInputHandler.cpp  HudRegion.cpp  OsgInput.cpp  Region.cpp  StrokeRegion.cpp  TextRegion.cpp
trunk/src/hogboxStage/: CMakeLists.txt  Component.cpp  ComponentXmlManager.cpp  EntityManager.cpp  RenderableComponent.cpp
trunk/src/hogboxVision/: CMakeLists.txt  CameraBasedTracker.cpp  CameraCalibration.cpp  HogTracker.cpp  PlanarTrackedObject.cpp  RTTPass.cpp  TrackedObject.cpp  VideoLayer.cpp  VideoStream.cpp  VideoTex2DCallBack.cpp  VisionRegistry.cpp
trunk/src/hogboxVisionPlugins/: CMakeLists.txt
trunk/src/hogboxVisionPlugins/hogboxVisionDShowVideoPlugin/: DSOsgImageRender.h  DShowVideoStream.cpp
trunk/src/hogboxVisionPlugins/hogboxVisionDShowWebCamPlugin/: DSOsgImageRender.cpp  DSUtils.cpp  DSUtils.h  DShowCaptureStream.cpp  DShowCaptureStream.h
trunk/src/hogboxVisionPlugins/hogboxVisionIPhoneWebCamPlugin/: CMakeLists.txt  IPhoneCameraController.mm  IPhoneWebCamStream.h  IPhoneWebCamStream.mm
trunk/src/hogboxXmlPlugins/hogboxHUDPlugin/: HudRegionManager.cpp  HudRegionXmlWrapper.h
trunk/src/hogboxXmlPlugins/hogboxPlugin/: CMakeLists.txt  FeatureLevelXmlWrapper.h  HogBoxLightManager.cpp  HogBoxLightXmlWrapper.h  HogBoxMaterialManager.cpp  HogBoxMaterialXmlWrapper.h  HogBoxObjectManager.cpp  HogBoxObjectXmlWrapper.h  HogBoxViewerManager.cpp  HogBoxViewerXmlWrapper.h  MeshMappingXmlWrapper.h  OsgImageManager.cpp  OsgImageXmlWrapper.h  OsgNodeManager.cpp  OsgNodeXmlWrapper.h  OsgShaderManager.cpp  OsgShaderXmlWrapper.h  OsgTexture2DXmlWrapper.h  OsgTextureManager.cpp  OsgTextureRectangleXmlWrapper.h  OsgTextureXmlWrapper.h  OsgUniformXmlWrapper.h
(+74 files in other folders)
