IF(DYNAMIC_hogbox)
    ADD_DEFINITIONS(-DHOGBOX_LIBRARY)
ELSE()
    ADD_DEFINITIONS(-DHOGBOX_LIBRARY_STATIC)
ENDIF()

SET(LIB_NAME hogbox)
SET(HEADER_PATH ${hogbox_SOURCE_DIR}/include/${LIB_NAME})

SET(LIB_PUBLIC_HEADERS
	${HEADER_PATH}/Export.h
	${HEADER_PATH}/Version.h
	${HEADER_PATH}/HogBoxLight.h
	${HEADER_PATH}/HogBoxMaterial.h
	${HEADER_PATH}/HogBoxMesh.h
	${HEADER_PATH}/HogBoxNotifyHandler.h
	${HEADER_PATH}/HogBoxObject.h
	${HEADER_PATH}/HogBoxUtils.h
	${HEADER_PATH}/HogBoxViewer.h
	${HEADER_PATH}/Noise.h
	${HEADER_PATH}/SystemInfo.h
    ${hogbox_CONFIG_HEADER}
)

ADD_LIBRARY(${LIB_NAME}
    ${hogbox_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
	HogBoxLight.cpp
	HogBoxMaterial.cpp
	HogBoxMesh.cpp
	HogBoxNotifyHandler.cpp
	HogBoxObject.cpp
	HogBoxUtils.cpp
	HogBoxViewer.cpp
	Noise.cpp
	SystemInfo.cpp
    #${HOGBOX_VERSIONINFO_RC}
)

LINK_WITH_VARIABLES(${LIB_NAME}     
    OSG_LIBRARY
    OSGDB_LIBRARY
    OSGUTIL_LIBRARY
    OSGVIEWER_LIBRARY
	OSGGA_LIBRARY
    OPENTHREADS_LIBRARY
)
LINK_EXTERNAL(${LIB_NAME} ${OPENGL_LIBRARIES}) 
LINK_CORELIB_DEFAULT(${LIB_NAME})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEBUG_POSTFIX "d")
if(MSVC)
    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
endif(MSVC)

INCLUDE(ModuleInstall OPTIONAL)
